--- a/index.html
+++ b/index.html
@@ -54,22 +54,22 @@
 			<nav class="header__nav">
 				<ul class="menu-primary">
 					<li class="menu-primary__item">
-						<a href="index.html#step" class="js-scr" title="">Программа</a>
+						<a href="#step" class="js-scr" title="">Программа</a>
 					</li>
 					<li class="menu-primary__item">
-						<a href="index.html#about" class="js-scr" title="">О тренере</a>
+						<a href="#about" class="js-scr" title="">О тренере</a>
 					</li>
 					<li class="menu-primary__item">
-						<a href="index.html#features" class="js-scr" title="">Особенности</a>
+						<a href="#features" class="js-scr" title="">Особенности</a>
 					</li>
 					<li class="menu-primary__item">
-						<a href="index.html#reviews" class="js-scr" title="">Результаты учеников</a>
+						<a href="#reviews" class="js-scr" title="">Результаты учеников</a>
 					</li>
 					<li class="menu-primary__item">
-						<a href="index.html#format" class="js-scr" title="">Формат работы</a>
+						<a href="#format" class="js-scr" title="">Формат работы</a>
 					</li>
 					<li class="menu-primary__item">
-						<a href="index.html#price" class="js-scr" title="">Стоимость</a>
+						<a href="#price" class="js-scr" title="">Стоимость</a>
 					</li>
 				</ul>
 			</nav>
@@ -410,7 +410,7 @@
 									</figcaption>
 								</figure>
 								<p class="coach__item-text">Начал тренировать в 2003 году. Провёл тренинги в 24 городах России, Европы и Азии. Обучал сотрудников «Сбербанка», «Яндекса», «Альфа-Банка».<br>Выступает на радио, телевидении, издал 5 книг, поставил и достиг 30 целей.</p>
-								<a href="index.html#about" class="coach__item-link js-scr" title="почитать о Николае Воробьёве">подробнее</a>
+								<a href="#about" class="coach__item-link js-scr" title="почитать о Николае Воробьёве">подробнее</a>
 							</div>
 							<div class="coach__item">
 								<figure class="coach__item-head">
@@ -1010,7 +1010,7 @@
 
 <!-- begin JS-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="http://pre.parapix.ru/template/js/jquery.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="/template/js/jquery.min.js"><\/script>')</script>
 
 <script src="template/js/plugins.min.js"></script>
 <script src="template/js/main.min.js"></script>
