--- a/index.html
+++ b/index.html
@@ -1,48 +1,7 @@
-<!DOCTYPE html>
+---
+layout: base
+---
 
-<!--
-	Site created: parapix.ru
--->
-
-<html>
-<head>
-<!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
-	<meta charset="UTF-8">
-	<title>Победитель</title>
-	<meta name="viewport" content="width=1260">
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
-	<meta name="author" content="parapix.ru">
-
-    <meta property="og:locale" content="ru_RU" />
-    <meta property="og:title" content="«Победитель» онлайн-тренинг Николая Воробьёва" />
-    <meta property="og:url" content="http://" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="template/images/icon/social_photo.jpg" />
-
-    <meta property="og:description" content="Научишься хотеть большего, поймешь куда идти, добьёшься поставленных целей" />
-
-    <link rel="image_src" href="template/images/icon/social_photo.jpg" />
-    <link rel="icon" type="image/x-icon" href="template/images/icon/favicon-32.png" />
-    <link rel="shortcut icon" type="image/x-icon" href="template/images/icon/favicon-32.png" />
-
-	<link rel="apple-touch-icon" href="template/images/icon/1024.png" />
-
-	<link rel="apple-touch-icon" sizes="76x76" href="template/images/icon/apple-touch-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="template/images/icon/apple-touch-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="template/images/icon/apple-touch-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="template/images/icon/apple-touch-icon-180x180.png">
-
-
-	<!--[if lt IE 9]>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	<link rel="stylesheet" href="template/css/style.min.css">
-
-
-</head>
-<body>
 <div class="root-layout">
 	<header class="header">
 		<div class="container">
@@ -965,7 +924,7 @@
    	<div class="form">
    		<h3 class="title">Регистрируйся на первую бесплатную консультацию</h3>
    		
-		<form method="post">
+		<form method="post" action="http://love.prorealnost.com/order.php">
 			<ul class="form__wrap row">
 				<li class="form__item col-xs-4">
 		    		<input type="text" name="name" class="input input--outline" placeholder="Имя">
@@ -979,6 +938,8 @@
 				    </button>
 			    </li>
 			</ul>
+      <input type="hidden" name="trello-list-id" value="569f823006dc53595355c866" />
+      <input type="hidden" name="redirect" value="http://pobeditel.soedinennost.com/ok/" />
 		</form>
 	</div>
 </div>
@@ -992,43 +953,4 @@
 	</div>
 </div>
 
-
-
-
 <!--/noindex-->
-
-<noscript>
-	<div class="notice notice--warning">
-		<div class="row">
-			<!--noindex-->
-			Внимание! В вашем браузере отключен <b>JavaScript</b>. Для работы с сайтом, <b>включите его</b>.
-			<!--/noindex-->
-		</div>
-	</div>
-</noscript>
-
-
-<!-- begin JS-->
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/template/js/jquery.min.js"><\/script>')</script>
-
-<script src="template/js/plugins.min.js"></script>
-<script src="template/js/main.min.js"></script>
-<!-- /END JS-->
-
-
-<!--
-	Проект: Победитель
-	Студия: Parapix - http://parapix.ru
-	Разработчик: Геннадий Григорьев
-	Дата: 22.06.2016
-	Версия: 0.1
--->
-
-
-
-
-</body>
-</html>
-
-
