--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ layout: base
    	<div class="form">
    		<h3 class="title">Регистрируйся на первую бесплатную консультацию</h3>
    		
-		<form method="post" action="http://love.prorealnost.com/order.php">
+		<form method="post">
 			<ul class="form__wrap row">
 				<li class="form__item col-xs-4">
 		    		<input type="text" name="name" class="input input--outline" placeholder="Имя">
