исправлены ошибки в тексте

--- a/index.html
+++ b/index.html
@@ -790,7 +790,7 @@ layout: base
 							</article>
 							<article class="faq__item hidden">
 								<h5 class="title">Я хочу добиться сам, стоит ли мне идти на тренинг?</h5>
-								<p>Мы это уважаем. Давай объясню преимущество тренинга, а ты решишь. <nobr>Тренинг — билет</nobr> на скоростной поезд, с его помощью люди добиваются результатов в <nobr>3-5</nobr> быстрее за счет отработанной методики и поддержки. Поэтому&nbsp;выбирай тренинг, если хочешь избежать ошибок и получить результат быстро.</p>
+								<p>Мы это уважаем. Давай объясню преимущество тренинга, а ты решишь. <nobr>Тренинг — билет</nobr> на скоростной поезд, с его помощью люди добиваются результатов в <nobr>3-5</nobr> раз быстрее за счет отработанной методики и поддержки. Поэтому&nbsp;выбирай тренинг, если хочешь избежать ошибок и получить результат быстро.</p>
 							</article>
 							<article class="faq__item hidden">
 								<h5 class="title">Смогу ли я найти время, деньги?</h5>
@@ -863,7 +863,7 @@ layout: base
 								<li>Пройти курс обучения парашютному спорту AFF — прошёл половину</li>
 								<li>Выучить английский, немецкий и&nbsp;испанский — английский на отлично, немецкий и&nbsp;испанский — могу лучше</li>
 								<li>Научиться продавать — создал отдел продаж из 6 человек и их научил</li>
-								<li>Построить собственный бизнес в сфере IT — занял 25%&nbsp;своего рынка — 300&nbsp;корпоративных клиентов</li>
+								<li>Построить собственный бизнес в сфере IT — занял 25%&nbsp;своего рынка — 297&nbsp;корпоративных клиентов</li>
 								<li>Открыть филиал в Москве — есть</li>
 								<li>Переехать жить в Москву — есть</li>
 								<li>Купить квартиру в центре — есть</li>
