--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@ layout: base
 				</ul>
 			</nav>
 			<div class="header__order">
-				<button class="btn btn-primary" data-modal-target="modal">Зарегистрироваться</button>
+				<button class="btn btn-primary" data-modal-target="modal" data-analytics="header-button">Зарегистрироваться</button>
 			</div>
 		</div>
 	</header>
 	<main class="main" role="main">
-		<section id="first" class="section s-main">
+		<section id="first" class="section s-main" data-analytics-page="main">
 			<div class="container">
 				<div class="s-main__inner">
 					<h1 class="s-main__title">
@@ -50,7 +50,7 @@ layout: base
 				<span class="s-main__sign">Николай Воробьёв</span>
 			</div>
 		</section>
-		<section class="section s-student">
+		<section class="section s-student" data-analytics-page="student">
 			<div class="container">
 				<div class="row">
 					<article class="col-xs-6 student is-active">
@@ -108,7 +108,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section">
+		<section class="section" data-analytics-page="hurry">
 			<div class="container">
 				<h2 class="title title--center">
 					Не просирай время
@@ -137,7 +137,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section s-quote">
+		<section class="section s-quote" data-analytics-page="quote">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-9 col-xs-offset-2">
@@ -147,7 +147,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section s-goals">
+		<section class="section s-goals" data-analytics-page="goals">
 			<div class="container">
 				<h2 class="title">Ставь цель, ради которой <br> хочется развиваться</h2>
 				<div class="row">
@@ -234,7 +234,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section s-doit">
+		<section class="section s-doit" data-analytics-page="doit">
 			<div class="container">
 				<h2 class="title">Ты справишься</h2>
 				<p class="introtext">Вдохновляющая цель — 50% успеха, вторые 50% — качества, которые мы&nbsp;разовьем в тебе.<br/>С помощью них ты достигнешь цели.</p>
@@ -283,14 +283,14 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section s-definition">
+		<section class="section s-definition" data-analytics-page="definition">
 			<div class="container">
 				<div class="s-definition__inner">
 					<p><strong>Соединённость</strong> — состояние, в котором убеждения не блокируют результаты. Ты осознаёшь свою уникальность — исключительную комбинацию интересов и талантов, которые отличают тебя от других. Разбираешься, какие цели достойны тебя, и каких достоин ты. Идёшь к ним легко и получаешь результаты, что принадлежат тебе по праву.</p>
 				</div>
 			</div>
 		</section>
-		<section id="step" class="section s-step">
+		<section id="step" class="section s-step" data-analytics-page="step">
 			<div class="container">
 				<h3 class="title title--center">Программа «Победителя» — 6 шагов до любимого человека, бизнеса, увеличения доходов в 3 раза</h3>
 				<div class="step row">
@@ -328,17 +328,17 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section s-download">
+		<section class="section s-download" data-analytics-page="download">
 			<div class="container">
 				<div class="row text-center">
 					<div class="col-xs-6 col-xs-offset-3">
 						<h3>Получи полную программу тренинга и&nbsp;темы 40 бонусных лекций</h3>
-						<button class="btn btn-primary" data-modal-target="modal">Получить</button>
+						<button class="btn btn-primary" data-modal-target="modal" data-analytics="download-button">Получить</button>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section id="features" class="section s-features">
+		<section id="features" class="section s-features" data-analytics-page="features">
 			<div class="container">
 				<h2 class="title">Особенности курса: измеримый результат,<br> истинные цели, командная работа</h2>
 				<div class="row">
@@ -382,7 +382,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section id="reviews" class="section s-reviews">
+		<section id="reviews" class="section s-reviews" data-analytics-page="reviews">
 			<div class="container">
 				<h2 class="title title--center">
 					<em>100%</em>учеников, которые работали<br>
@@ -560,10 +560,10 @@ layout: base
 						</div>
 					</article>
 				</div>
-				<button class="btn btn--lg js-list-show">+ Посмотреть больше</button>
+				<button class="btn btn--lg js-list-show" data-analytics="reviews-more">+ Посмотреть больше</button>
 			</div>
 		</section>
-		<section class="section s-result">
+		<section class="section s-result" data-analytics-page="result">
 			<div class="container">
 				<h2>Результат достигается по технологии 
 				<em>«Планка — Продуктивность»</em></h2>
@@ -637,7 +637,7 @@ layout: base
 
 			</div>
 		</section>
-		<section id="format" class="section s-format">
+		<section id="format" class="section s-format" data-analytics-page="format">
 			<div class="container">
 				<h2 class="title">Формат работы</h2>
 				<div class="row">
@@ -661,7 +661,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section id="price" class="section s-price">
+		<section id="price" class="section s-price" data-analytics-page="price">
 			<div class="container">
 				<h2 class="title">Курс можно купить частями или полностью, полностью на&nbsp;6&nbsp;000&nbsp;рублей дешевле</h2>
 				<div class="price">
@@ -709,7 +709,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section">
+		<section class="section" data-analytics-page="join">
 			<div class="container">
 				<h2 class="title title--center">Присоединяйся к сообществу людей, которые управляют жизнью и получают желаемое</h2>
 				<div class="text-center">
@@ -717,7 +717,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section s-anchor">
+		<section class="section s-anchor" data-analytics-page="anchor">
 			<div class="container">
 				<h3 class="title">Регистрируйся на первую бесплатную консультацию</h3>
 				<ul>
@@ -738,7 +738,7 @@ layout: base
 							    		<input type="text" class="input" name="phone" placeholder="Телефон">
 							    	</li>
 								    <li class="form__item col-xs-4">
-								    	<button class="btn btn-primary">
+								    	<button class="btn btn-primary" data-analytics="anchor-button">
 									    	Зарегистрироваться
 									    </button>
 								    </li>
@@ -752,7 +752,7 @@ layout: base
 				</div>
 			</div>
 		</section>
-		<section class="section s-faq">
+		<section class="section s-faq" data-analytics-page="faq">
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-3">
@@ -816,10 +816,10 @@ layout: base
 						</div>
 					</div>
 				</div>
-				<button class="btn btn--lg js-list-show">+ Посмотреть больше</button>
+				<button class="btn btn--lg js-list-show" data-analytics="faq-more">+ Посмотреть больше</button>
 			</div>
 		</section>
-		<section id="about" class="section s-about">
+		<section id="about" class="section s-about" data-analytics-page="about">
 			<div class="s-about__sticker js-sticker-about"></div>
 			<div class="container">
 				<div class="row">
@@ -941,7 +941,7 @@ layout: base
 		    		<input type="text" name="phone" class="input input--outline" placeholder="Телефон">
 		    	</li>
 			    <li class="form__item col-xs-4">
-			    	<button class="btn btn-primary">
+			    	<button class="btn btn-primary" data-analytics="modal-register-button">
 				    	Зарегистрироваться
 				    </button>
 			    </li>
@@ -964,7 +964,7 @@ layout: base
 		    		<input type="email" name="email" class="input input--outline" placeholder="Эл.почта">
 		    	</li>
 			    <li class="form__item col-xs-4">
-			    	<button class="btn btn-primary">
+			    	<button class="btn btn-primary" data-analytics="modal-download-button">
 				    	Скачать
 				    </button>
 			    </li>
