ссылки на соцсети

--- a/index.html
+++ b/index.html
@@ -904,13 +904,13 @@ layout: base
 			<div class="social">
         		<div class="social-list">
         			<div class="social-list__item">
-        				<a href="http://vk.com/" class="social-link social-link--vk" target="blank" title="">VK</a>
+        				<a href="http://vk.com/nickvorobiov" class="social-link social-link--vk" target="blank" title="">VK</a>
         			</div>
         			<div class="social-list__item">
-        				<a href="https://www.facebook.com/" class="social-link social-link--fb" target="blank" title="">Facebook</a>
+        				<a href="https://www.facebook.com/nickvorobiov" class="social-link social-link--fb" target="blank" title="">Facebook</a>
         			</div>
         			<div class="social-list__item">
-        				<a href="http://youtube.com/" class="social-link social-link--yt" target="blank" title="">YouTube</a>
+        				<a href="https://www.youtube.com/channel/UCbbCWanO90kT2NBAhnt3EPw" class="social-link social-link--yt" target="blank" title="">YouTube</a>
         			</div>
 				</div>
 			</div>
