--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@ layout: base
 				<h2>Результат достигается по технологии 
 				<em>«Планка — Продуктивность»</em></h2>
 				<div class="row">
-					<div class="col-xs-6">
+					<div class="col-xs-7">
 						<div class="s-result__item s-result__item--outline">
 							<h4>Прицеливание — 4 шага</h4>
 							<ul>
@@ -599,9 +599,10 @@ layout: base
 									</ul>
 								</li>
 							</ul>
+							<i class="s-result__arrow"></i>
 						</div>
 					</div>
-					<div class="col-xs-5 col-xs-offset-1">
+					<div class="col-xs-5">
 						<div class="s-result__item">
 							<h4>Достижение — 4 шага</h4>
 							<ul>
