текст на стикерах с целями выровнен

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ layout: base
 					</div>
 					<div class="goal col-xs-3">
 						<div class="goal__inner">
-							<p>Купить квартиру, зарабатывать не 60 000 рублей, а 300 000!</p>
+							<p>Купить квартиру, зарабатывать не&nbsp;60&nbsp;000 рублей, а&nbsp;300&nbsp;000!</p>
 						</div>
 					</div>
 					<div class="goal goal--photo col-xs-3">
@@ -183,7 +183,7 @@ layout: base
 					</div>
 					<div class="goal col-xs-3">
 						<div class="goal__inner">
-							<p>Переехать в другой город или страну</p>
+							<p>Переехать в&nbsp;другой город или страну</p>
 						</div>
 					</div>
 					<div class="goal goal--photo col-xs-3">
@@ -193,7 +193,7 @@ layout: base
 					</div>
 					<div class="goal col-xs-3">
 						<div class="goal__inner">
-							<p>Сформировать вдохновляющее окружение и найти новых друзей</p>
+							<p>Сформировать вдохновляющее окружение и&nbsp;найти новых друзей</p>
 						</div>
 					</div>
 					<div class="goal goal--photo col-xs-3">
@@ -208,7 +208,7 @@ layout: base
 					</div>
 					<div class="goal col-xs-3">
 						<div class="goal__inner">
-							<p>Переспать с Ланой Дел Рей</p>
+							<p>Переспать с&nbsp;Ланой Дел Рей</p>
 						</div>
 					</div>
 					<div class="goal goal--photo col-xs-3">
@@ -218,7 +218,7 @@ layout: base
 					</div>
 					<div class="goal col-xs-3">
 						<div class="goal__inner">
-							<p>Научиться лучше общаться с людьми и влиять на них</p>
+							<p>Научиться лучше общаться с&nbsp;людьми и&nbsp;влиять на&nbsp;них</p>
 						</div>
 					</div>
 					<div class="goal col-xs-3">
@@ -228,7 +228,7 @@ layout: base
 					</div>
 					<div class="goal col-xs-3">
 						<div class="goal__inner">
-							<p>Стать здоровым: физически и психологически</p>
+							<p>Стать здоровым: физически и&nbsp;психологически</p>
 						</div>
 					</div>
 				</div>
